// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with marginRight if not last in the row 1`] = `
<Touchable
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <Connect(NetworkImage)
    resizeMode="cover"
    source={
      Object {
        "uri": "http://.../",
      }
    }
    style={
      Object {
        "height": 10,
        "marginBottom": 2,
        "marginRight": 5,
        "width": 10,
      }
    }
  />
</Touchable>
`;

exports[`renders without marginRight if last in the row 1`] = `
<Touchable
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
>
  <Connect(NetworkImage)
    resizeMode="cover"
    source={
      Object {
        "uri": "http://.../",
      }
    }
    style={
      Object {
        "height": 10,
        "marginBottom": 2,
        "width": 10,
      }
    }
  />
</Touchable>
`;
